--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -13,8 +13,8 @@
     <% @lists.each do |list| %>
       <div class="co-12 colsm-6 col-md-4">
         <%= link_to list_path(list), class:'text-decoration-none' do %>
-          <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
-            <%= list.name %>
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, width: 400, crop: :fill %>')">
+            <h4><%= list.name %></h4>
           </div>
         <% end %>
       </div>
