--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,4 +1,4 @@
-.card-category {
+.card-category, .card-large {
   background-size: cover;
   background-position: center;
   height: 180px;
@@ -13,5 +13,7 @@
 }
 
 .card-large {
-  height: 50vh;
+  height: 70vh;
+  background-size: cover;
+  background-position: center;
 }
