--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -11,9 +11,14 @@
   </div>
   <div class="row">
     <% @lists.each do |list| %>
+      <% if list.photo.attached? %>
+        <% photo = list.photo.key %>
+      <% else %>
+        <% photo = "projector_dmdu6g.webp"%>
+      <% end %>
       <div class="co-12 colsm-6 col-md-4">
         <%= link_to list_path(list), class:'text-decoration-none' do %>
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, width: 400, crop: :fill %>')">
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path photo, height: 300, width: 400, crop: :fill %>')">
             <h4><%= list.name %></h4>
           </div>
         <% end %>
