--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,14 @@
+<% if @list.photo.attached? %>
+<% photo = @list.photo.key %>
+<% else %>
+<% photo = "projector_dmdu6g.webp"%>
+<% end %>
+
 <div class="position-relative">
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 600, crop: :fill %>')">
+  <div class="card-large" style = "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path photo, height: 600, crop: :fill %>')">
     <h1><%= @list.name %></h1>
   </div>
 </div>
-<span class="movie-tag"><%= pluralize(@list.movies.size, 'movie') %></span>
 <div class="container mb-5 p-2">
   <h2><%= @list.name %></h2> 
   <div class="d-flex justify-content-between my-4">
