--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -14,8 +14,8 @@
   <div class="d-flex justify-content-between my-4">
     <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
     <div>
-      <%= link_to 'add a movie', new_list_bookmark_path(@list), class: 'btn btn-flat' %>
-      <%= link_to 'delete this list', list_path(@list), method: :delete, class: 'btn btn-cancel', data: { confirm: 'Are you sure you want to delete this list?' } %>
+      <%= link_to 'Add a Movie', new_list_bookmark_path(@list), class: 'btn btn-flat' %>
+      <%= link_to 'Delete this List', list_path(@list), method: :delete, class: 'btn btn-cancel', data: { confirm: 'Are you sure you want to delete this list?' } %>
     </div>
   </div>
   <div class="row my-2">
