--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div class="container mb-5 p-2">
-  <h2><%= @list.name %></h2> 
+  <h2><%= @list.name %></h2>
   <div class="d-flex justify-content-between my-4">
     <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
     <div>
@@ -58,7 +58,7 @@
     </div>
     <div class="col-12 col-sm-6">
       <div class="bg-white rounded p-3">
-        <h5>Add your review</h5>
+        <h5>Add your Review</h5>
         <%= simple_form_for [@list, @review] do |f| %>
           <%= f.input :comment, placeholder: 'Add your review here...' %>
           <%= f.input :rating, as: :select, collection: (1..5), required: true, prompt: "What's your rating", input_html: { id: 'review_rating' } %>
