--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -17,7 +17,7 @@
         <% photo = "projector_dmdu6g.webp"%>
       <% end %>
       <div class="co-12 colsm-6 col-md-4">
-        <%= link_to list_path(list), class:'text-decoration-none' do %>
+        <%= link_to list_path(list).capitalize, class:'text-decoration-none' do %>
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path photo, height: 300, width: 400, crop: :fill %>')">
             <h4><%= list.name %></h4>
           </div>
